Use [[likely]] and [[unlikely]] in c++20 mode
When compiling in the c++20 mode, use the standard [[likely]] and
[[unlikely]] instead of GNU built-ins. It enables these directives on
other platforms.

All uses of our macros had to be edited to remove the outer parentheses.

Implements: https://github.com/pisa-engine/pisa/issues/570
Signed-off-by: Michal Siedlaczek <michal@siedlaczek.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 if(NOT CMAKE_CXX_STANDARD EQUAL 17)
     add_compile_definitions(PISA_ENABLE_CONCEPTS=1)
+    add_compile_definitions(PISA_CXX20=1)
 endif()
 add_compile_definitions(BOOST_NO_CXX98_FUNCTION_BASE=1)
 
