--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -74,7 +74,7 @@ jobs:
       run: docker run --env CODECOV_TOKEN="${{ secrets.CODECOV_TOKEN }}" --rm pisa
 
   format:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v2
@@ -82,7 +82,7 @@ jobs:
     - name: Install clang-format
       shell: bash
       run: |
-          sudo pip install clang-format
+          sudo pip install clang-format==20.1.6
 
     - name: Set up Python
       uses: actions/setup-python@v5
